tests/baselines/reference/derivedStructConstructorWithoutSuperCall.errors.txt
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructConstructorWithoutSuperCall.ts(9,5): error TS20008: Constructors for derived structs must contain a 'super' call.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructConstructorWithoutSuperCall.ts(18,5): error TS20008: Constructors for derived structs must contain a 'super' call.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructConstructorWithoutSuperCall.ts(19,24): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructConstructorWithoutSuperCall.ts(24,5): error TS20008: Constructors for derived structs must contain a 'super' call.
tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructConstructorWithoutSuperCall.ts(25,31): error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.


==== tests/cases/conformance/structs/constructorDeclarations/structSuperCalls/derivedStructConstructorWithoutSuperCall.ts (5 errors) ====
    // doc 3.2
    // derived struct constructors must contain a super call
    
    struct Base {
        x: string;
    }
    
    struct Derived extends Base {
        constructor() { // error
        ~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS20008: Constructors for derived structs must contain a 'super' call.
    }
    
    struct Base2 {
        x: any;
    }
    
    struct Derived2 extends Base2 {
        constructor() { // error for no super call (nested scopes don't count)
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            var r2 = () => super(); // error for misplaced super call (nested function)
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                           ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    ~~~~~
!!! error TS20008: Constructors for derived structs must contain a 'super' call.
    }
    
    struct Derived3 extends Base2 {
        constructor() { // error
        ~~~~~~~~~~~~~~~~~~~~~~~~
            var r = function () { super() } // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                                  ~~~~~
!!! error TS2337: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    ~~~~~
!!! error TS20008: Constructors for derived structs must contain a 'super' call.
    }
    
    struct Derived4 extends Base2 {
        constructor() {
            var r = super(); // ok
        }
    }